<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 OpenSilk Productions LLC
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- Plugin info -->
    <string name="kutr_name">Kutr</string>
    <string name="kutr_description">Kutr library plugin</string>

    <!-- Library picker -->
    <string name="kutr_credentials">Set credentials…</string>
    <string name="kutr_authorizing">Authorizing…</string>
    <string name="kutr_msg_unable_to_authorize">Authorization failed</string>
    <string name="kutr_host">Host…</string>
    <string name="kutr_host_default">http://yourserverhere</string>
    <string name="kutr_account">Account…</string>
    <string name="kutr_password">Password…</string>
    <string name="kutr_cache">Set cache…</string>


    <!-- Settings-->
    <string name="kutr_about_title">About</string>
    <string name="kutr_about_me" translatable="false">X-Ryl669</string>
    <string name="kutr_about_me_url" translatable="false">http://github.com/X-Ryl669/kutr</string>
    <string name="kutr_version">Version</string>
    <string name="kutr_legal_title">Legal</string>
    <string name="kutr_open_source_licenses">Open source licenses</string>

</resources>
