<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 OpenSilk Productions LLC
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/kutr_credentials">


        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/kutr_host_default"
            android:inputType="textCapWords"
            android:key="host"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/kutr_host" />
        <EditTextPreference
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/kutr_account"
            android:key="account"
            android:summary="The login on the server" />
        <EditTextPreference
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/kutr_password"
            android:key="password"
            android:summary="Your password on the server"
            android:password="true" />

    </PreferenceCategory>



</PreferenceScreen>